Fixed task items squeezing issue when number of items is more than what task-area can visibly contain

--- a/style.css
+++ b/style.css
@@ -135,13 +135,14 @@ input[type="text"] {
 .task-list-area {
     width: 100%;
     height: calc(100vh - 30vh - 114px);
+    min-height: 352.9px;
     padding: 0.75rem;
     overflow-y: scroll;
     overflow-x: hidden;
 }
 .task-list {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     border-radius: 8px;
     display: flex;
     flex-direction: column;
